Fix whitespace bug, closes #87

--- a/src/styles/material/_login_material.sass
+++ b/src/styles/material/_login_material.sass
@@ -18,6 +18,7 @@
       .text
         color: $dark-text-color
         .welcome
+          white-space: nowrap
           span
             color: $light-primary-color
         .message
